--- a/digi-react/src/components/footer/style.module.scss
+++ b/digi-react/src/components/footer/style.module.scss
@@ -1,5 +1,6 @@
 
-    align-items: center;
+    * {
+    align-items: left;
     border: 1px solid black;
     border-radius: 6px;
     display: flex;
