--- a/digi-react/src/style.module.scss
+++ b/digi-react/src/style.module.scss
@@ -1,15 +1,18 @@
 
 
-.page {
+body {
     background-color: aquamarine;
     height: 1000px;
     margin: 2rem auto;
-    max-width: 1000px;
+    max-width: 2000px;
     padding: 20px;
 
     &h1 {
         margin-bottom: 10px;
         text-decoration: underline;
     }
+
+   
+
 }
 
