--- a/digi-react/src/pages/about/style.scss
+++ b/digi-react/src/pages/about/style.scss
@@ -1,3 +1,30 @@
 body {
-  background-color: lightblue;
+  background-color: rgb(94, 193, 227);
 }
+
+.style {
+  display: grid;
+  // grid-template-columns: 200px 200px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+
+  h2 {
+    font-size: 36px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 18px;
+    
+  }
+  
+}
+.style-about-heading {
+  text-align: center;
+}
+
+
