--- a/digi-react/src/pages/about/style.scss
+++ b/digi-react/src/pages/about/style.scss
@@ -1,30 +1,61 @@
 body {
-  background-color: rgb(94, 193, 227);
+  // background-color: rgb(40, 161, 98);
 }
 
-.style {
-  display: grid;
+.style-about {
+  // display: grid;
   // grid-template-columns: 200px 200px;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+  // justify-content: center;
+  // text-align: center;
+  // align-items: center;
+  background-color: #2c6E49;
+  width: 90%;
+  margin: 0 auto;
+
+
+  
 
   h2 {
-    font-size: 36px;
+    font-size: 40px;
+    color: white;
+    padding: 30px;
   }
 
   h3 {
-    font-size: 24px;
+    font-size: 30px;
+    color: white;
   }
 
-  p {
-    font-size: 18px;
-    
-  }
+  
   
 }
 .style-about-heading {
   text-align: center;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.grid-item {
+  // border: 5px solid black;
+}
+
+
+.style-img {
+  border: 5px solid white;
+}
+.style-bio {
+    font-size: 20px;
+    color: white;
+    width: 250px;
+    padding: 25px;
+    margin: 0 auto;
+  }
 
 
