--- a/digi-react/src/style.module.scss
+++ b/digi-react/src/style.module.scss
@@ -1,6 +1,6 @@
 
 body {
-    background-color: aquamarine;
+    background-color: #95b8d1;
     height: 1000px;
     margin: 2rem auto;
     max-width: 2000px;
