--- a/digi-react/src/components/header/style.module.scss
+++ b/digi-react/src/components/header/style.module.scss
@@ -5,13 +5,13 @@
   display: flex;
   justify-content: space-between;
   margin: auto;
-  width: 75%;
+  width: 90%;
   background-color: #F4d35e;
   border: 5px solid white;
 
   & h1 {
     font-family: 'Rubik Moonrocks', cursive;
-    font-size: 50px;
+    font-size: 2.5rem;
   }
 }
 
@@ -27,13 +27,15 @@
     justify-content: center;
     list-style-type: none;
     margin: 0 15px;
-    min-width: 75px;
-    padding: 2px;
+    min-width: 50px;
+    height: 50px;
+    padding: 5px;
     text-decoration: none;
     background-color: white;
     color: black;
     font-family: 'Concert One', cursive;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    // overflow: auto;
   }
 
   & a:hover {
