--- a/digi-react/src/style.module.scss
+++ b/digi-react/src/style.module.scss
@@ -5,11 +5,16 @@ body {
     margin: 2rem auto;
     max-width: 2000px;
     padding: 20px;
-
+    font-family: Consolas;
     &h2 {
         margin-bottom: 10px;
         text-decoration: underline;
     }
+    body {
+        font-size: 20px;
+        color:#800080
+        
+      }
 
 }
 
