--- a/digi-react/src/pages/NasaGallery/style.module.scss
+++ b/digi-react/src/pages/NasaGallery/style.module.scss
@@ -1,21 +1,9 @@
-
-
 .Nasa {
     margin: 1rem;
     font-family: 'Open sans', sans-serif;
     background-color: beige;
+    padding: 1rem;
 
-}
-
-.topContainer h1 {
-    text-align: center;
-}
-
-.gallery {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    box-sizing: border-box;
 }
 
 .images {
@@ -23,4 +11,36 @@
     font-weight: bolder;
     font-family: "Century";
     font-size: larger;
+}
+
+.title {
+    color: #CC5500;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 19%;
+    height: 20px;
+    margin: 0 auto;
+    text-align: left;
+    font-weight: bold;
+}
+
+.anchor {
+    text-decoration: none;  
+    color: #CC5500;
+    font-size: 2em;
+    border-radius: 5px;
+    opacity: .5;
+
+}
+
+.anchor:hover{
+    border: 2px solid #104F55;
+    background-color: rgba(365,365,365,0.5);
+    cursor: pointer;
+    color: #104F55;
+    opacity: .8;
+    transition: .3s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
